--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "body-parser": "^2.2.0",
     "ejs": "^3.1.10",
     "express": "^5.1.0",
+    "express-ejs-layouts": "^2.5.1",
     "path": "^0.12.7"
   }
 }
