--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "express": "^5.1.0",
     "express-ejs-layouts": "^2.5.1",
     "firebase-admin": "^13.4.0",
+    "nodemailer": "^7.0.5",
     "path": "^0.12.7"
   }
 }
